--- a/playground/tsconfig.json
+++ b/playground/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "paths": {
       "nuxt-betterauth-cf/auth": ["../src/runtime/server/utils/auth.ts"],
-      "nuxt-betterauth-cf/config": ["../src/config.ts"],
+      "nuxt-betterauth-cf/config": ["../src/runtime/config.ts"],
     }
   }
 }
