--- a/package.json
+++ b/package.json
@@ -43,10 +43,12 @@
     "@nuxt/kit": "^4.0.3",
     "better-auth": "^1.3.5",
     "defu": "^6.1.4",
-    "drizzle-orm": "^0.44.4"
+    "drizzle-orm": "^0.44.4",
+    "@cloudflare/workers-types": "^4.20250812.0",
+    "nitro-cloudflare-dev": "^0.2.2",
+    "wrangler": "^4.29.0"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250812.0",
     "@nuxt/devtools": "^2.6.2",
     "@nuxt/eslint-config": "^1.8.0",
     "@nuxt/module-builder": "^1.0.2",
@@ -56,13 +58,11 @@
     "changelogen": "^0.6.2",
     "drizzle-kit": "^0.31.4",
     "eslint": "^9.33.0",
-    "nitro-cloudflare-dev": "^0.2.2",
     "nuxt": "^4.0.3",
     "typescript": "~5.9.2",
     "vitest": "^3.2.4",
     "vue-router": "^4.5.1",
-    "vue-tsc": "^3.0.5",
-    "wrangler": "^4.29.0"
+    "vue-tsc": "^3.0.5"
   },
   "peerDependencies": {
     "vue-router": "^4.5.1"
