--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit"
   },
   "dependencies": {
+    "@cloudflare/workers-types": "^4.20250812.0",
     "@nuxt/kit": "^4.0.3",
     "better-auth": "^1.3.5",
     "defu": "^6.1.4",
     "drizzle-orm": "^0.44.4",
-    "@cloudflare/workers-types": "^4.20250812.0",
+    "jiti": "^2.5.1",
+    "mlly": "^1.7.4",
     "nitro-cloudflare-dev": "^0.2.2",
     "wrangler": "^4.29.0"
   },
