chore: Add client config

--- a/playground/tsconfig.json
+++ b/playground/tsconfig.json
@@ -4,6 +4,7 @@
     "paths": {
       "nuxt-betterauth-cf/auth": ["../src/runtime/server/utils/auth.ts"],
       "nuxt-betterauth-cf/config": ["../src/runtime/config.ts"],
+      "#auth/config": ["./auth/config.ts"],
     }
   }
 }
